--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jstl-1.2.jar=C:\\Users\\thdai\\Downloads\\Connect_mySQL-20220606T071628Z-001\\Connect_mySQL\\jstl-1.2.jar
-file.reference.sqljdbc4.jar=C:\\Users\\thdai\\Downloads\\Connect_mySQL-20220606T071628Z-001\\Connect_mySQL\\sqljdbc4.jar
+file.reference.jstl-1.2.jar=../../../../thdai/Downloads/Connect_mySQL-20220606T071628Z-001/Connect_mySQL/jstl-1.2.jar
+file.reference.sqljdbc4.jar=../../../../thdai/Downloads/Connect_mySQL-20220606T071628Z-001/Connect_mySQL/sqljdbc4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -83,6 +83,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=HangMayBay.war
+war.name=HangMayBayP2.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
