--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-file.reference.jstl-1.2.jar=C:\\Users\\Admin\\Downloads\\JDBC\\jstl-1.2.jar
-file.reference.sqljdbc4.jar=C:\\Users\\Admin\\Downloads\\JDBC\\sqljdbc4.jar
-j2ee.server.home=C:/Users/Admin/Downloads/apache-tomcat-8.5.78
-j2ee.server.instance=tomcat80:home=C:\\Users\\Admin\\Downloads\\apache-tomcat-8.5.78
+deploy.ant.properties.file=C:\\Users\\phuoc\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv32058455752.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/phuoc/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
-selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
+user.properties.file=C:\\Users\\phuoc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
