--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\Thanh Phuc\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
 file.reference.jstl-1.2.jar=C:\\Users\\Admin\\Downloads\\JDBC\\jstl-1.2.jar
 file.reference.sqljdbc4.jar=C:\\Users\\Admin\\Downloads\\JDBC\\sqljdbc4.jar
-j2ee.server.home=C:/Users/Admin/Downloads/apache-tomcat-8.5.78
-j2ee.server.instance=tomcat80:home=C:\\Users\\Admin\\Downloads\\apache-tomcat-8.5.78
+j2ee.server.home=D:/Student/PRJ301/Material/apache-tomcat-8.5.78
+j2ee.server.instance=tomcat80:home=D:\\Student\\PRJ301\\Material\\apache-tomcat-8.5.78
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Thanh Phuc\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
